--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Computer scientist</h2>
     <br>
     <p>
-        Sir Timothy John Berners-Lee, also known TimBL, is an English <a class="link" href="index1.html" target="_blank">Computer scientist</a>,best known as the inventor of the World Wide Web.
+        Sir Timothy John Berners-Lee, also known TimBL, is an English <a class="link" href="./index1.html" target="_blank">Computer scientist</a>,best known as the inventor of the World Wide Web.
     </p>
     <img src="./img/Sir-Timothy-John-Berners-Lee.jpg" alt="Foto">
 </body>
