--- a/index1.html
+++ b/index1.html
@@ -24,8 +24,8 @@
         <p class="text4">
         through reprogramming.
     </p>
-    <img src="/img/Eniac.jpg" alt="Foto">
+    <img src="./img/Eniac.jpg" alt="Foto">
     <br>
-    <button><a href="/index.html"> Back </a></button>
+    <button><a href="./index.html"> Back </a></button>
 </body>
 </html>
